# Sanduhr_f-r_Claude

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  discord-post.md  pr_description.md  sanduhr.py
.claude/: settings.local.json
.github/workflows/: docs-check.yml  windows-ci.yml  windows-release.yml
.vibe-doc/: profile.json
docs/: PRIVACY.md  adr.md  appcast.xml  index.html  index.md  ms-store-submission-playbook.md  scope.md  test-plan.md
docs/_archive/: README.md  prd.md  reflection.md  spec.md
mac/: Info.plist  Package.swift  README.md  build.sh  make-dmg.sh  notarize.sh  release.sh
windows/: .gitignore  README.md  RELEASE_NOTES.md  TEST_PLAN.md  build.ps1  capture-themes.py  pyproject.toml  requirements-dev.txt  requirements.txt  sanduhr.spec  version_info.txt
windows/icon/: make-icon.ps1  make-icon.py
windows/installer/: Sanduhr.iss  make-banners.py
windows/msix/: Package.appxmanifest.template  make-msix-images.py  make-msix.ps1
windows/src/sanduhr/: __init__.py  __main__.py  api.py  app.py  credentials.py  fetcher.py  focus.py  game.py  history.py  mica.py  pacing.py  paths.py  settings_dialog.py  sparkline.py  themes.py  tiers.py  widget.py
windows/tests/: conftest.py  test_api.py  test_breathing_glass.py  test_clear_credentials.py  test_credentials.py  test_dialog_styling.py  test_edge_resize.py  test_fetcher.py  test_focus_physics.py  test_history.py  test_horizon_sparkline.py  test_pace_ghost.py  test_pacing.py  test_paths.py  test_themes.py  test_tier_card.py  test_user_themes.py  test_widget_bootstrap.py
(+37 files in other folders)
